# python-ocr-learning

./: How to Preprocess Images for Text OCR in Python (OCR in Python Tutorials 02.02).txt  instructions.txt  pyproject.toml
ocrlearn/: __main__.py  ocr_marginalia.py  ocr_marginalia_seperate_footnote.py  ocr_oepncv.py  ocr_opencv_test.ipynb  ocr_test1.py  pytesseract_bounding_box.py  pytesseract_example.py  pytesseract_ocr_index.py
